; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/extr_vmw_balloon.c_vmballoon_stats_gen_add.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/extr_vmw_balloon.c_vmballoon_stats_gen_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmballoon = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vmballoon*, i32, i32)* @vmballoon_stats_gen_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vmballoon_stats_gen_add(%struct.vmballoon* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.vmballoon*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.vmballoon* %0, %struct.vmballoon** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = call i64 (...) @is_vmballoon_stats_on()
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %20

9:                                                ; preds = %3
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.vmballoon*, %struct.vmballoon** %4, align 8
  %12 = getelementptr inbounds %struct.vmballoon, %struct.vmballoon* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = load i32, i32* %5, align 4
  %17 = zext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = call i32 @atomic64_add(i32 %10, i32* %18)
  br label %20

20:                                               ; preds = %9, %3
  ret void
}

declare dso_local i64 @is_vmballoon_stats_on(...) #1

declare dso_local i32 @atomic64_add(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
